skeleton landing page with Node.js, SASS, and webpack

--- a/src/index_template.html
+++ b/src/index_template.html
@@ -14,23 +14,22 @@
     </nav>
 
     <div id="main">
-        <span style="font-size:30px;cursor:pointer" onclick="toggleDrawer()">&#9776; Menu</span>
         <header>
-            <h1>Adrien Nabonne | Software Engineer</h1>
+            <h1><span style="cursor:pointer" onclick="toggleDrawer()">&#9776;</span> Adrien Nabonne | Software Engineer</h1>
         </header>
         <section class="content">
             <p>Welcome to my landing page</p>
             <div class="pdf-container">
-              <iframe src="Resume-Adrien_Nabonne-March-2024.pdf" frameborder="0">
-              This browser does not support PDFs. Please download the PDF to view it: <a href="Resume-Adrien_Nabonne-March-2024.pdf">Download PDF</a>.
+              <iframe src="assets/Resume-march-2024_extended.pdf" frameborder="0">
+              This browser does not support PDFs. Please download the PDF to view it: <a href="assets/Resume-march-2024_extended.pdf">Download PDF</a>.
               </iframe>
             </div>
         </section>
         <footer>
-            <p>Your Footer Content</p>
+            <p>All rights reserved. Built with Node.js, SASS, and webpack</p>
         </footer>
     </div>
 
-    <script src="script.js"></script>
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
